--- a/multiplayer_ingress2.yml
+++ b/multiplayer_ingress2.yml
@@ -80,7 +80,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dboxIPX-loadbalancer
+  name: dboxipx-loadbalancer
 spec:
   selector:
     app-group: dboxIPX
