--- a/multiplayer_ingress.yml
+++ b/multiplayer_ingress.yml
@@ -106,6 +106,8 @@ metadata:
   name: dosbox-ingress
   annotations: 
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
 spec:
   ingressClassName: nginx 
   rules: 
