--- a/multiplayer_ingress.yml
+++ b/multiplayer_ingress.yml
@@ -108,6 +108,9 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    service.beta.kubernetes.io/do-loadbalancer-name: "load-balancer"
+    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
+    nginx.ingress.kubernetes.io/server-snippet: "keepalive_timeout 1s; client_body_timeout 1s;"
 spec:
   ingressClassName: nginx 
   rules: 
